# bridge

./: .pre-commit-config.yaml  MANIFEST.in  README.md  README_dev.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bridge/: __init__.py
bridge/eeg/: __init__.py  connector.py
bridge/eeg/brainaccess/: device.py
bridge/server/: __init__.py
src/eeg/: __init__.py  connector.py
src/eeg/brainaccess/: __init__.py  cap_factory.py  device.py
src/eeg/core/: __init__.py  device.py
src/server/: __init__.py  cli.py  server.py
src/server/handlers/: __init__.py  frontend.py
tests/: test_plugin_system.py
tests/eeg/: test_connector.py
tests/eeg/brainaccess/: test_brainaccess.py
tests/server/: test_server_frontend.py
