[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-bridge"
version = "1.0.2"
authors = [
    { name = "mateusz-kow", email = "kowalski.mateusz.1lo1@gmail.com" },
]
description = "A versatile bridge application and SDK for connecting with EEG devices."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy~=1.26.4",
]

[project.optional-dependencies]
server = [
    "websockets~=12.0",
]
dev = [
    "websockets~=12.0",
    "pandas",
    "mne~=1.6.0",
    "matplotlib",
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mateusz-kow/bridge"
Issues = "https://github.com/mateusz-kow/bridge/issues"

[project.scripts]
bridge-server = "server.cli:run_server_cli"

# NO [tool.hatch.build] SECTION IS NEEDED.
# Hatch will automatically detect the src/test_bridge directory.

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "I", "C90"]

[tool.black]
line-length = 120

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
strict = true
ignore_missing_imports = true
exclude = ["tests/"]